--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "react-typewriter": "^0.4.1",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^7.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
